src/ui/elements/Sidebar/sidebar.scss
@use '../../../styles/pivotick' as pvt;

.pvt-sidebar {
    position: relative;
    background: var(--pvt-ui-bg);
    box-shadow: var(--pvt-sidebar-layout-shadow-right);

    .pvt-sidebar-elements {
        height: 100%;
        overflow-y: auto;
        overflow-x: hidden;
        display: flex;
        flex-direction: column;
        gap: 10px;
        // padding: 10px 8px;

        .enter-active {
            opacity: 1 !important;
            transform: translateX(0) !important;
        }
        .enter-ready {
            transition: opacity 0.1s ease, transform 0.1s ease;
            opacity: 0;
            transform: translateX(-8px);
        }

        .pvt-extra-panel {
            display: flex;
            flex-direction: column;
            gap: 10px;
        }

        .pvt-sidebar-panel {
            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;

            .pvt-sidebar-header-panel {
                display: none;
                min-height: 40px;
                align-items: center;
                padding: 2px 6px;
                font-weight: 300;
                color: var(--pvt-text-color-5);

                &.pvt-neighbors-header-panel {
                    display: flex;
                    align-items: center;
                }
            }

            .pvt-sidebar-body-panel {
                min-height: 32px;
                padding: 6px;

                &.pvt-neighbors-body-panel {
                    position: relative;
                    width: 100%;
                    height: var(--pvt-sidebar-width);
                    box-sizing: border-box;

                    .pvt-neighbors-count {
                        position: absolute;
                        right: 10px;
                        bottom: 5px;
                        font-size: 14px;
                        font-weight: 300;
                        color: var(--pvt-text-color-5);
                    }

                    .pivotick-tab-panels {
                        height: 100%;

                        div[data-tab-panel="egograph"] {
                            border: var(--pvt-sidebar-panel-border);
                            height: 100%;
                            div {
                                height: 100%;
                            }

                            .pivotick .pvt-canvas  {
                                background-image: none;
                            }
                        }

                        div[data-tab-panel="list"] {

                            .edge-details {
                                margin-bottom: 4px;
                                display: flex;
                                flex-direction: row;
                                align-items: center;
                                flex-wrap: nowrap;
    
                                .edge {
                                    margin-right: 4px;
    
                                    &.edge-out {
                                        color: var(--pvt-text-color-primary);
                                        width: 2em !important;
                                    }
                                    &.edge-in {
                                        color: var(--pvt-text-color-secondary);
                                        width: 2em !important;
                                    }
                                }
    
                                .pvt-neighbors-list__nodecontainer {
                                    display: flex;
                                    flex-direction: row;
                                    align-items: center;
                                    gap: 5px;
    
                                    .pvt-neighbors-list__nodepreview {
                                        @include pvt.node-preview-container;
                                        width: 30px;
                                        height: 30px;
                                    
                                        .pvt-mainheader-icon {
                                            width: 26px;
                                            height: 26px;
                                        }
                                    }
                                }
    
                                .pvt-neighbor-edge-description {
                                    margin-left: auto;
                                    border-radius: 2px;

                                    &.empty-label {
                                        color: var(--pvt-text-color-3);
                                        font-style: italic;
                                    }
                                }
                            }
                        }

                        div[data-tab-panel="stats"] {
                            .main-stats-container {
                                display: flex;
                                flex-direction: column;
                                gap: 10px;
                            }
                        }
                    }
                }
            }
        }
    }

    .pvt-sidebar-collapse-container {
        position: absolute;
        right: -40px;
        bottom: 7px;
        background-color: var(--pvt-sidebar-collapse-bg);
        color: var(--pvt-sidebar-collapse-color);
        box-shadow: var(--pvt-sidebar-collapse-shadow);
        border: 1px solid var(--pvt-sidebar-collapse-border-color);
        padding: 4px;
        font-size: 20px;
        border-radius: 50%;
        width: 26px;
        height: 26px;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;

        &:hover {
            color: color-mix(in srgb, var(--pvt-sidebar-collapse-color) 70%, black);
        }

        &:active {
            color: color-mix(in srgb, var(--pvt-sidebar-collapse-color) 85%, black);
            transition: transform 0.05s ease-out;
            transform: scale(0.95);
        }

        .pvt-sidebar-collapse-button {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 24px;
            height: 24px;
        }

        .pvt-sidebar-collapse-button-expand {
            display: none;
        }
    }
}

.pvt-sidebar-collapsed .pvt-sidebar-collapse-button-collapse {
    display: none !important;
}

.pvt-sidebar-collapsed .pvt-sidebar-collapse-button-expand {
    display: flex !important;
}

